Actualiza README con informacion de pre-commits

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,1 +1,15 @@
-[flake8]max-line-length = 160max-complexity = 10
+[flake8]
+max-line-length = 88
+exclude =
+    .eggs/*.py,
+    versioneer.py,
+    env  # exclude asv benchmark environments from linting
+    requirements.txt
+    .git
+    __pycache__
+    build/
+    dist/
+
+[tool.black]
+line-length = 88
+skip-string-normalization = true
